--- a/frontend/src/component/Page/home.css
+++ b/frontend/src/component/Page/home.css
@@ -15,7 +15,7 @@
   }
   
   .App-header {
-    background-color: #282c34;
+    background-color: #000000;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
@@ -37,3 +37,4 @@
       transform: rotate(360deg);
     }
   }
+  
